@@ -14,23 +14,20 @@ Doc: Let $E/\Q$ be an elliptic curve of conductor $N$. For $\varepsilon =
  (integration of the N\'eron differential $dx/(2y+a_1x+a3)$ on the connected
  component of $E(\R)$, i.e.~the generator of $H_1(E,\Z)^+$) normalized by
  $\Omega^+>0$. Let $i\Omega^-$ the integral on a generator of $H_1(E,\Z)^-$ with
- $\Omega^- \in \R_{>0}$. If $c_\infty$ is the number of connected
- components of $E(\R)$, $\Omega^-$ is equal to
- $(-2/c_\infty) \times \kbd{imag(E.omega[2])}$.
+ $\Omega^- \in \R_{>0}$. If $c_\infty$ is the number of connected components of
+ $E(\R)$, $\Omega^-$ is equal to $(-2/c_\infty) \times \kbd{imag(E.omega[2])}$.
  The complex modular symbol is defined by
  $$F: \delta \to  2i\pi \int_{\delta} f(z) dz$$
  The modular symbols $x^\varepsilon$ are normalized so that
- $ F = x^+ \Omega^+ + x^- i\Omega^-$.
- In particular, we have
+ $ F = x^+ \Omega^+ + x^- i\Omega^-$. In particular, we have
  $$ x^+([0]-[\infty]) = L(E,1) / \Omega^+,$$
- which defines $x^{\pm}$ unless $L(E,1)=0$.
- Furthermore, for all fundamental discriminants $D$ such
- that $\varepsilon \cdot D > 0$, we also have
+ which defines $x^{\pm}$ unless $L(E,1)=0$. Furthermore, for all fundamental
+ discriminants $D$ such that $\varepsilon \cdot D > 0$, we also have
  $$\sum_{0\leq a<|D|} (D|a) x^\varepsilon([a/|D|]-[\infty])
     = L(E,(D|.),1) / \Omega^{\varepsilon},$$
- where $(D|.)$ is the Kronecker symbol.
- The period $\Omega^-$ is also $2/c_\infty \times$ the real period
- of the twist $E^{(-4)} = \kbd{elltwist(E,-4)}$.
+ where $(D|.)$ is the Kronecker symbol. The period $\Omega^-$ is also
+ $2/c_\infty \times$ the real period of the twist
+ $E^{(-4)} = \kbd{elltwist(E,-4)}$.
 
  This function returns the pair $[M, x]$, where $M$ is
  \kbd{msinit}$(N,2)$ and $x$ is $x^{\var{sign}}$ as above when $\var{sign}=
@@ -47,4 +44,6 @@ Doc: Let $E/\Q$ be an elliptic curve of conductor $N$. For $\varepsilon =
  %5 = [[1/5, -1/2, -1/2]~, [0, 1/2, -1/2]~]
  ? p = 23; (mshecke(M,p) - ellap(E,p))*x[1]
  %6 = [0, 0, 0]~ \\ true at all primes, including p = 11; same for x[2]
- @eprog
+ @eprog\noindent Instead of a single curve $E$, one may use instead a vector
+ of \emph{isogenous} curves. The function then returns $M$ and the
+ vector of attached modular symbols.
