@@ -40,7 +40,8 @@
 , 1/2, 0, -1/2, 0, -2/5, -1/10, 0, 1/2, -1/2, -1/2, -1/10, 1/2, -1/10, 1/2, 
 -1/2, 0, -2/5]~]
 [[1/3, -1/2, 1/6, 0, -1/2, 1/6, 0]~, [0, 1/2, -1/6, -1/3, -1/2, 1/6, 1/3]~]
-[[1/4, -1/2, -1/2]~, [0, 1/2, -1/2]~]
+[[[1/4, -1/2, -1/2]~, [0, 1/2, -1/2]~], [[1/4, -1/2, -1/2]~, [0, 1/2, -1/2]~
+], [[1/2, -1, -1]~, [0, 1/2, -1/2]~], [[1/8, -1/4, -1/4]~, [0, 1/2, -1/2]~]]
 227
 [[[-2, -2; -7, -1; -8, 4; -1, -1; 4, 1; -6, 0; -2, 1; 4, 1; 2, -1; -1, -1; 1
 1, -1; 9, -3; 8, -4; 5, 2; 8, 2; -2, 1; 4, 1; -8, 1; 1, 1; -1, -1], [1, -2; 
@@ -305,4 +306,4 @@ O(11^7) + (10 + 3*11 + 6*11^2 + 9*11^3 + 8*11^4 + 5*11^5 + O(11^6))*x + (6 +
 5^13 + 3*5^14 + 4*5^15 + 3*5^16 + 4*5^17 + 2*5^18 + O(5^19), O(5^19), 4 + 5 
 + 4*5^4 + 4*5^5 + 3*5^8 + 5^11 + 3*5^12 + 5^13 + 3*5^14 + 5^15 + 5^16 + 3*5^
 17 + 4*5^18 + O(5^19)]
-Total time spent: 2816
+Total time spent: 4079
