@@ -30,7 +30,9 @@ check_twist([0,-1,1,-7,10]) \\121b1
 check_twist([1,-1,0,0,-5]) \\45a1
 check_twist([0,0,1,-3,-5]) \\99d1
 check_twist([0,0,1,0,-7])  \\27a1
-check_twist([1,-1,1,-1,-14])\\17a1
+\\17a1-4
+vE=[[1,-1,1,-1,-14],[1,-1,1,-6,-4],[1,-1,1,-91,-310],[1,-1,1,-1,0]];
+msfromell([ellinit(e)|e<-vE])[2]
 
 N = 227
 W = msinit(N,2,1);
